--- a/src/app/components/user-coming/user-coming.component.html
+++ b/src/app/components/user-coming/user-coming.component.html
@@ -3,7 +3,7 @@
 >
   <div class="card">
     <h1 class="card-header bg-success">{{reservation?.name}}
-      <span class="float-right">ovde ide ikonica za brisanje ovog zahteva</span>
+      <span class="float-right">Dolazim</span>
     </h1>
     <div class="card-body">
       <h3>room: {{reservation?.room?.name}}</h3>
